Applied repository  for db, Authentication, Registration, Token generation, login

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "The Magic secret key"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=DatingApp.db"
   },
