Delete photo. Member detail, Edit main photo Upload photos, Authentication and Authorization update

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "photogrammer",
+    "ApiKey": "659351378395462",
+    "ApiSecret": "s0t7wsJryS8ejTpDiLsI8wTf4_0"
+  }
 }
